--- a/mystyle.css
+++ b/mystyle.css
@@ -91,44 +91,40 @@ body, html {
     padding: 10px;
 }
 
-
-
-@media (max-width: 1024px) {
-    .header, .footer {
-        padding: 15px;
+@media screen and (max-width: 768px) {
+    .container {
+        grid-template-areas: 
+            "header"
+            "links"
+            "secondary-content"
+            "footer";
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
     }
+}
 
-    .links {
-        width: 100%;
-        float: none;
-        display: block;
-        text-align: center;
-        margin: 0;
-    }
-
-    .secondary-content {
-        margin: 0;
+@media screen and (max-width: 360px) {
+    .container {
+        grid-template-areas: 
+            "header"
+            "links"
+            "secondary-content"
+            "footer";
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
     }
 }
 
 
-@media (max-width: 640px) {
-    .header, .footer {
-        padding: 10px;
-        font-size: 14px;
-    }
 
-    .links {
-        width: 100%;
-        display: block;
-        text-align: center;
-    }
 
-    .secondary-content {
-        margin-top: 10px;
-        width: 100%;
-        text-align: center;
-    }
-}
+
+    
+
+
+
+
+
+
 
 
